# project_mistral

./: .env.example  .env.template  .gitignore  Dockerfile  ENHANCED_MEDICAL_DETECTION.md  FALSE_POSITIVE_FIX.md  FIXED_ISSUES.md  GITHUB_SETUP.md  MULTIPLE_FILES_UPDATE.md  PLATFORM_READY.md  PROJECT_SUMMARY.md  PUSH_TO_GITHUB.md  QUICK_PUSH_GUIDE.md  README.md  RENAME_SUGGESTIONS.md  TESTING_COMPLETE.md  TESTING_SUMMARY.md  create_documentation.py  docker-compose.yml  documind_run.py  pyproject.toml  requirements.txt  simple_demo.py  test_file_1.txt  test_file_2.txt  test_file_3.txt  test_medical_enhanced.txt  test_simple.txt
src/documind/: __init__.py  app.py  cli.py  core.py  gradio_app.py  mind_enhanced_app.py  models.py
src/documind/agents/: __init__.py  base_agent.py  bridge_agent.py  compliance_agent.py  coordinator.py  enhanced_agents.py  guardrails_agent.py  mistral_agent.py  openai_agent.py
src/documind/automation/: __init__.py  adaptive_agent.py  decision_engine.py  intelligent_processor.py
src/documind/bridges/: __init__.py  analyzer.py  extractor.py
src/documind/compliance/: __init__.py  classifier.py  jurisdiction_detector.py  mozambique_analyzer.py  pii_detector.py  policies.yaml
src/documind/utils/: __init__.py  audit_logger.py  comparison.py  encryption.py  report_generator.py
test_data/: eu_gdpr_compliant.txt  eu_gdpr_contract.txt  high_risk_violations.txt  mixed_violations.txt  mozambique_compliant.txt  mozambique_medical.txt  mozambique_test_contract.txt
tests/: __init__.py
